# mirrortest

./: .coveragerc  .flake8  .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: mypy.yaml  pytest.yaml
mirrortest/: __main__.py  mailhandle.py  mailhandle.pyi  models.py  models.pyi  session.py
mirrortest/tooling/: __init__.py  cli.py  cli.pyi
tests/: test_import.py
tests/cli/: test_cli.py
tests/models/: test_configuration.py  test_mirror.py  test_mirrortester.py  test_tier0.py
