[build-system]
requires = ["setuptools ~= 58.0"]

[project]
name = "mirrortest"
authors = [
	{name = "Anton Hvornum", email = "anton@hvornum.se"}
]
description = "Test the health of a given mirror."
homepage = "https://github.com/Torxed/mirrortest.git"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["arch", "linux", "mirror", "test", "health", "sync"]
classifiers = [
	"Framework :: Pydantic",
	"Programming Language :: Python :: 3"
]
dependencies = [
	"pydantic"
]
dynamic = [
	"version"
]

[project.optional-dependencies]
test = [
	"pytest",
	"mypy",
	"flake8",
]

[project.scripts]
mirrortest = "mirrortest.tooling.cli:run"

[tool.setuptools.dynamic]
version = {attr = "mirrortest.__version__"}

[tool.mypy]
exclude = ['venv', '.venv', 'tests', 'build']