[metadata]
name = mirrortest
version = attr: mirrortest.__version__
description = Test the health of a given mirror.
author = Anton Hvornum
author_email = anton@hvornum.se
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/Torxed/mirrortest
classifiers =
    Framework :: Pydantic
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >= 3.10

[options.entry_points]
console_scripts =
    mirrortest = mirrortest.tooling.cli:run